feat: introduce additional velocity functions (#87)
Refs: #86
